# RTMA_consensus_surface_properties

./: .gitignore  README.md
utils/: CMakeLists.txt  README.md  build.sh  make.sh
utils/modulefiles/: build.hera.intel  build.wcoss_dell_p3.intel
utils/scripts/: run.coasts.sh  run.no.lakes.ksh  run_coasts.wcoss_dell.sh  run_no.lakes.sh  run_no.lakes.wcoss_dell.sh
utils/sorc/: CMakeLists.txt
utils/sorc/fix_coasts/: CMakeLists.txt  fix.f90  fix_coasts.f90
utils/sorc/fix_coasts_alaska/: CMakeLists.txt  fix.f90
utils/sorc/fix_coasts_conus/: CMakeLists.txt  fix.f90
utils/sorc/fix_mask_cats/: CMakeLists.txt  fix_mask_cats.f90
utils/sorc/fix_scan_mode/: CMakeLists.txt  fix_scan_mode.f90
utils/sorc/remove_lakes/: CMakeLists.txt  nolakes.f90
utils/sorc/remove_lakes/alaska/: CMakeLists.txt  nolakes_alaska.f90
utils/sorc/remove_lakes/conus/: CMakeLists.txt  nolakes.f90
utils/sorc/remove_lakes/hi_pr/: CMakeLists.txt  nolakes_hi_pr.f90
utils/sorc/remove_lakes/pr1p25/: CMakeLists.txt  nolakes_pr1p25.f90
